2004-05-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/fret-diagrams.scm: Add header.

	* scm/output-gnome.scm: Hello world :-)

2004-05-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/lilypond.py (run_dvips): only add papersize if present.

	* lily/accidental-engraver.cc (update_local_key_signature): new
	function, fold code from initialize() and process_music().
	(update_local_key_signature): use deep copy. This fixes one
	problem from custom-key-signatures.ly.
	(number_accidentals_from_sig): tighter check for
	accidental-too-old.

	* ly/engraver-init.ly: remove localKeySignature
	definition from ChoirStaff, StaffGroup, Score.
	
	* lily/percent-repeat-engraver.cc (try_music): add moments for
	barlines too. Fixes: skipbars-percent-repeat.ly.

2004-05-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/context-def.cc (filter_performers): don't go to cdrloc if
	skipping last pair. Fixes: crash-bar-number.

	* scm/fret-diagrams.scm (nil): fret-diagrams (courtesy Carl
	D. Sorensen)

	* input/test/fret-diagram.ly: new file.

	* scm/paper.scm (paper-set-staff-size): scale linewidth too.
	(scale-paper): divide by scale.

2004-05-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/rest-collision.cc (do_shift): also do nothing for the (0,2)
	case.

2004-05-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/stencil.scm (fontify-text): reinstate function

	* tex/lily-ps-defs.tex: remove lilypondblotdiam def.

	* lily/book-paper-def.cc (Book_paper_def): add copy ctor.

	* lily/parser.yy (book_paper_head): \bookpaper {} 

	* python/midi.c: remove config.h

2004-05-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm: Update.

2004-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm: New file.

	* lily/include/book-paper-def.hh: Add.  Janitorial fixes.

2004-05-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/book-paper-def.cc (ly_bookpaper_fonts): move from Paperdef
	(find_scaled_font): move from Paper_def
