@@ -1,3 +1,8 @@
+2004-05-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/score.cc (default_rendering): scale outputdef before
+	starting.
+
 2004-05-25  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scm/fret-diagrams.scm: Add header.
